--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+html, body { /*Browser reset*/
+    margin:0;
+    padding:0;    
+}
+    
 .container{
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -5,6 +11,26 @@
 
 .navigation-bar{
     grid-row: 1 / 4;
+    color: white;
+    background-color: #38bdf8;
+    padding-right: 50px;
+}
+.logo {
+    font-size: 24px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 36px;
+}
+.main-options, .settings{
+    align-items: left;
+    display: grid;
+    gap: 20px;
+}
+.main-options li, .settings li{
+    margin-bottom: 12px;
+}
+ul{
+    list-style: none;
 }
 
 .header{
