--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ ul{
 }
 
 /*Projects grid*/
-.projects-grid-area{
-    
+.projects-grid-area p{
+    margin-left: 10px;
 }
 .projects-grid-container{
     display: grid;
@@ -83,7 +83,7 @@ ul{
     grid-template-rows: 3fr 1fr;
     padding-top:6px;
     padding-left: 10px;
-    margin: 8px;
+    margin: 0px 8px 8px 8px;
     border-left: orange 6px solid;
     border-radius: 6px;
 }
@@ -105,8 +105,24 @@ ul{
     margin-bottom: 12px;
 }
 
-
-
+/*Right side content announcements and trending*/
+.announcements-container{
+    background-color: white;
+    border-radius: 8px;
+    margin-right: 8px;
+}
+.news{
+    padding: 24px;
+    border-bottom: 1px solid gray;
+}
+.news p:nth-child(1){
+    margin: 0;
+    font-weight: 550;
+}
+.news p:nth-child(2){
+    margin: 0;
+    font-size: 12px;
+}
 
 .trending-accounts-container{
     grid-column: 3/4;
