--- a/style.css
+++ b/style.css
@@ -110,18 +110,27 @@ ul{
     background-color: white;
     border-radius: 8px;
     margin-right: 8px;
+    padding: 24px;
+    display: grid;
+    gap: 12px;
 }
 .news{
-    padding: 24px;
     border-bottom: 1px solid gray;
 }
-.news p:nth-child(1){
+.announcements-container .news:nth-child(3){
+    margin-bottom: -12px;
+    border-bottom: none;
+}
+.news p{
     margin: 0;
+}
+.news p:nth-child(1){
     font-weight: 550;
+    font-size: 14px;
 }
 .news p:nth-child(2){
-    margin: 0;
     font-size: 12px;
+    margin-bottom:12px;
 }
 
 .trending-accounts-container{
