--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html, body { /*Browser reset*/
     color: white;
     background-color: #38bdf8;
     padding-right: 50px;
+    height: 100vh;
 }
 .logo {
     font-size: 24px;
@@ -105,7 +106,7 @@ ul{
     margin-bottom: 12px;
 }
 
-/*Right side content announcements and trending*/
+/*Right side content announcements*/
 .announcements-container{
     background-color: white;
     border-radius: 8px;
@@ -114,11 +115,14 @@ ul{
     display: grid;
     gap: 12px;
 }
+.announcements-title{
+    margin-left: 6px;
+}
 .news{
     border-bottom: 1px solid gray;
 }
 .announcements-container .news:nth-child(3){
-    margin-bottom: -12px;
+    margin-bottom: -12px; /*Reset bottom margin*/
     border-bottom: none;
 }
 .news p{
@@ -133,6 +137,29 @@ ul{
     margin-bottom:12px;
 }
 
+
+/*Right side contents trending accounts bar*/
 .trending-accounts-container{
     grid-column: 3/4;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    background-color: white;
+    padding: 24px;
+    border-radius: 8px;
+    margin-right: 8px;
+}
+.trending-avatar, .trending-name{
+    margin-bottom: 10px;
+}
+.trending-avatar-container{
+    display: grid;
+    font-size: 24px;
+    padding-top: 4px;
+    margin-right: 5px;
+}
+.trending-name p{
+    margin:0;
+}
+.trending-name p:nth-child(2){
+    font-size: 10px;
 }
