--- a/style.css
+++ b/style.css
@@ -116,9 +116,6 @@ ul{
 
 
 
-
-
-
 /*Projects grid*/
 .projects-grid-area p{
     margin-left: 10px;
@@ -154,6 +151,8 @@ ul{
     margin-right: 24px;
     margin-bottom: 12px;
 }
+
+
 
 /*Right side content announcements*/
 .announcements-container{
@@ -204,7 +203,8 @@ ul{
     display: grid;
     font-size: 24px;
     padding-top: 4px;
-    margin-right: 5px;
+    text-align: center;
+    margin-right: 8px;
 }
 .trending-name p{
     margin:0;
