--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 html, body { /*Browser reset*/
     margin:0;
     padding:0;    
-    background-color: #d4d4d4;
+    background-color: #eff6ff;
+    font-family: 'Roboto', sans-serif;
 }
     
 .container{
@@ -16,7 +17,6 @@ html, body { /*Browser reset*/
 .navigation-bar{
     grid-row: 1 / 4;
     color: white;
-    background-color: #38bdf8;
     padding-right: 50px;
     min-height: 100vh;
 }
@@ -25,6 +25,12 @@ html, body { /*Browser reset*/
     margin-top: 20px;
     margin-left: 20px;
     margin-bottom: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo > *{
+    margin-right: 5px;
 }
 .main-options, .settings{
     align-items: left;
@@ -43,7 +49,7 @@ ul{
 /*Both top and bottom header*/
 .header-container{
     grid-column:2/4;
-    background-color: #e0f2fe;
+    background-color: white;
     padding: 10px 24px 12px 24px;
 }
 /*Header top portion*/
@@ -57,6 +63,7 @@ ul{
     align-items: center;
 }
 .search-bar textarea{
+    background-color: #eff6ff;
     outline: none;
     border: 1px solid black;
     resize: none;
@@ -75,10 +82,7 @@ ul{
 .top-right > *{
     margin-left: 10px;
 }
-.top-right div:nth-child(2) { /*Avatar top-right*/
-    margin-left: 30px;
-    font-size: 36px;
-}
+
 /*Header bottom portion*/
 .header-bottom{
     display: grid;
@@ -90,8 +94,8 @@ ul{
 .big-profile{
     align-items: center;
 }
-.big-profile div:nth-child(1){ /*Avatar bottom-left*/
-    font-size: 42px;
+.big-profile svg{ /*Avatar bottom-left*/
+    display: block;
     margin-right: 8px;
 }
 .username div:nth-child(1){
@@ -107,7 +111,6 @@ ul{
 .action-buttons button{
     border: none;
     border-radius: 14px;
-    background-color: #38bdf8;
     color: white;
     padding: 6px 12px 6px 12px;
     font-size: 14px;
@@ -147,7 +150,6 @@ ul{
     justify-content: right;
 }
 .mini-buttons{
-    margin-top: 5px;
     margin-right: 24px;
     margin-bottom: 12px;
 }
@@ -177,11 +179,11 @@ ul{
     margin: 0;
 }
 .news p:nth-child(1){
-    font-weight: 550;
+    font-weight: 1000;
     font-size: 14px;
 }
 .news p:nth-child(2){
-    font-size: 12px;
+    font-size: 10px;
     margin-bottom:12px;
 }
 
@@ -211,4 +213,13 @@ ul{
 }
 .trending-name p:nth-child(2){
     font-size: 10px;
+}
+
+
+/*Common styling*/
+.project-cell, .announcements-container, .trending-accounts-container, .header-container{
+    box-shadow: 2px 4px 5px #a1a1aa;
+}
+.navigation-bar, .action-buttons button{
+    background-color: #0ea5e9;
 }
