--- a/style.css
+++ b/style.css
@@ -236,6 +236,61 @@ ul{
 }
 
 
+/*New project pop-up*/
+.new-project-container{
+    position: absolute;
+    background-color: white;
+    border: 1px solid #a1a1aa;
+    border-left: orange 8px solid;
+    box-shadow: 2px 4px 5px #a1a1aa;
+    border-radius: 8px;
+    top: 30%;
+    left: 30%;
+    min-width: fit-content;
+    min-height: fit-content;
+    padding: 24px 24px 24px 24px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    gap: 14px;
+}
+.new-project-container button{
+    width: fit-content;
+    background-color: #0ea5e9;
+    border: none;
+    border-radius: 10px;
+    padding: 8px;
+    color: white;
+}
+.new-project-container button:nth-child(1):hover{
+    background-color: red;
+}
+.new-project-container button:nth-child(2):hover{
+    background-color: orange;
+}
+.new-project-title, .new-project-description{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    
+}
+.new-project-title textarea, .new-project-description textarea{
+    resize: none;
+    outline: none;
+    font-size: 18px;
+    border-radius: 8px;
+}
+
+textarea{
+    font-family: 'Roboto';
+}
+textarea:focus{
+    border-color: #0ea5e9;
+}
+
+
+
+
 /*Common styling*/
 .project-cell, .announcements-container, .trending-accounts-container, .header-container{
     box-shadow: 2px 4px 5px #a1a1aa;
